fix: change gap to padding

--- a/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
+++ b/packages/ibm-products-web-components/src/utilities/overflow-handler/story-styles.scss
@@ -29,9 +29,11 @@ $story-prefix: 'overflow-handler-stories__';
 
 .items {
   display: flex;
-  // Spacing between tags.
-  gap: spacing.$spacing-03;
   white-space: nowrap;
+
+  > span:has(#{carbon-config.$prefix}-tag) {
+    padding-inline: spacing.$spacing-01;
+  }
 
   &--vertical {
     flex-direction: column;
